--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,12 +60,14 @@ jobs:
 
           if [[ -n "${{ steps.get_changed_files.outputs.all_changed_files }}" ]]; then
             echo "run_ci=true" >> "$GITHUB_OUTPUT"
+            echo "::set-output name=run_ci::true"
           else
             echo "run_ci=false" >> "$GITHUB_OUTPUT"
+            echo "::set-output name=run_ci::false"
           fi
 
     - name: Download Bitcoin ${{ matrix.bitcoind-version }} & install binaries
-      if: ${{ steps.set_plugin_dirs.outputs.run_ci == 'true' }}
+      if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
       run: |
         export BITCOIND_VERSION=${{ matrix.bitcoind-version }}
         wget https://bitcoincore.org/bin/bitcoin-core-${BITCOIND_VERSION}/bitcoin-${BITCOIND_VERSION}-x86_64-linux-gnu.tar.gz
@@ -74,7 +76,7 @@ jobs:
         rm -rf bitcoin-${BITCOIND_VERSION}-x86_64-linux-gnu.tar.gz bitcoin-${BITCOIND_VERSION}
 
     - name: Download Core Lightning latest & install binaries
-      if: ${{ steps.set_plugin_dirs.outputs.run_ci == 'true' }}
+      if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
       id: cln-latest-install
       run: |
         url=$(curl -s https://api.github.com/repos/ElementsProject/lightning/releases/latest \
@@ -85,7 +87,7 @@ jobs:
         echo "CLN_VERSION=$(lightningd --version)" >> "$GITHUB_OUTPUT"
 
     - name: Checkout Core Lightning latest
-      if: ${{ steps.set_plugin_dirs.outputs.run_ci == 'true' }}
+      if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
       uses: actions/checkout@v4
       with:
         repository: 'ElementsProject/lightning'
@@ -95,7 +97,7 @@ jobs:
         submodules: 'recursive'
 
     - name: Install Core Lightning Python package dependencies
-      if: ${{ steps.set_plugin_dirs.outputs.run_ci == 'true' }}
+      if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
       run: |
         sudo apt-get install -y \
           python3 \
@@ -117,14 +119,14 @@ jobs:
         pip install --user contrib/pyln-client contrib/pyln-testing flaky
 
     - name: Set up Python ${{ matrix.python-version }}
-      if: ${{ steps.set_plugin_dirs.outputs.run_ci == 'true' }}
+      if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
 
     - name: Run pytest tests
       id: pytest_tests
-      if: ${{ steps.set_plugin_dirs.outputs.run_ci == 'true' }}
+      if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
       run: |
         export CLN_PATH=${{ github.workspace }}/lightning
         export COMPAT=${{ matrix.deprecated }}
@@ -163,7 +165,7 @@ jobs:
     # A dummy task that depends on the full matrix of tests, and signals completion.
     name: CI completion
     runs-on: ubuntu-22.04
-    if: ${{ needs.build-and-test.outputs.run_ci == 'true' }}
+    if: ${{ github.event_name == 'push' || needs.build-and-test.outputs.run_ci == 'true' }}
     needs:
       - build-and-test
     steps:
