--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,8 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-        bitcoind-version: ["26.0"]
+        bitcoind-version: ["27.0"]
+        cln-version: ["24.05"]
         experimental: [1]
         deprecated: [0]
 
@@ -64,8 +65,34 @@ jobs:
             echo "run_ci=false" >> "$GITHUB_OUTPUT"
           fi
 
-    - name: Download Bitcoin ${{ matrix.bitcoind-version }} & install binaries
+    - name: Create cache paths
       if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
+      run: |
+        sudo mkdir /usr/local/libexec
+        sudo mkdir /usr/local/libexec/c-lightning
+        sudo mkdir /usr/local/libexec/c-lightning/plugins
+        sudo chown -R $USER /usr/local/libexec
+    
+    - name: Cache CLN
+      id: cache-cln
+      if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
+      uses: actions/cache@v4
+      with:
+        path: |
+          /usr/local/bin/lightning*
+          /usr/local/libexec/c-lightning
+        key: cache-cln-${{ matrix.cln-version }}-${{ runner.os }}
+    
+    - name: Cache bitcoind
+      id: cache-bitcoind
+      if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
+      uses: actions/cache@v4
+      with:
+        path: /usr/local/bin/bitcoin*
+        key: cache-bitcoind-${{ matrix.bitcoind-version }}-${{ runner.os }}
+
+    - name: Download Bitcoin ${{ matrix.bitcoind-version }} & install binaries
+      if: ${{ steps.cache-cln.outputs.cache-hit != 'true' && (github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true') }}
       run: |
         export BITCOIND_VERSION=${{ matrix.bitcoind-version }}
         wget https://bitcoincore.org/bin/bitcoin-core-${BITCOIND_VERSION}/bitcoin-${BITCOIND_VERSION}-x86_64-linux-gnu.tar.gz
@@ -73,11 +100,11 @@ jobs:
         sudo mv bitcoin-${BITCOIND_VERSION}/bin/* /usr/local/bin
         rm -rf bitcoin-${BITCOIND_VERSION}-x86_64-linux-gnu.tar.gz bitcoin-${BITCOIND_VERSION}
 
-    - name: Download Core Lightning latest & install binaries
-      if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
-      id: cln-latest-install
+    - name: Download Core Lightning ${{ matrix.cln-version }} & install binaries
+      if: ${{ steps.cache-cln.outputs.cache-hit != 'true' && (github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true') }}
+      id: cln-install
       run: |
-        url=$(curl -s https://api.github.com/repos/ElementsProject/lightning/releases/latest \
+        url=$(curl -s https://api.github.com/repos/ElementsProject/lightning/releases/tags/${{ matrix.cln-version }} \
           | jq '.assets[] | select(.name | contains("22.04")) | .browser_download_url' \
           | tr -d '\"')
         wget $url
@@ -90,7 +117,7 @@ jobs:
       with:
         repository: 'ElementsProject/lightning'
         path: 'lightning'
-        ref: ${{ steps.cln-latest-install.outputs.CLN_VERSION }}
+        ref: ${{ steps.cln-install.outputs.CLN_VERSION }}
         fetch-depth: 0  # Fetch all history for all branches and tags
         submodules: 'recursive'
 
