--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,32 +73,13 @@ jobs:
         sudo mkdir /usr/local/libexec/c-lightning/plugins
         sudo chown -R $USER /usr/local/libexec
 
-    - name: Cache CLN
-      id: cache-cln
-      if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
-      uses: actions/cache@v4
-      with:
-        path: |
-          /usr/local/bin/lightning*
-          /usr/local/libexec/c-lightning
-          ./lightning
-        key: cache-cln-${{ matrix.cln-version }}-${{ runner.os }}
-
-    - name: Cache bitcoind
+    - name: Restore bitcoind cache
       id: cache-bitcoind
       if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
       uses: actions/cache@v4
       with:
         path: /usr/local/bin/bitcoin*
         key: cache-bitcoind-${{ matrix.bitcoind-version }}-${{ runner.os }}
-
-    - name: Cache python dependencies
-      id: cache-python-deps
-      if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
-      uses: actions/cache@v4
-      with:
-        path: ~/.local/lib/python${{ matrix.python-version }}/site-packages
-        key: cache-python-deps-${{ matrix.python-version }}-${{ matrix.cln-version }}-${{ runner.os }}
 
     - name: Download Bitcoin ${{ matrix.bitcoind-version }} & install binaries
       if: ${{ steps.cache-bitcoind.outputs.cache-hit != 'true' && (github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true') }}
@@ -108,6 +89,24 @@ jobs:
         tar -xzf bitcoin-${BITCOIND_VERSION}-x86_64-linux-gnu.tar.gz
         sudo mv bitcoin-${BITCOIND_VERSION}/bin/* /usr/local/bin
         rm -rf bitcoin-${BITCOIND_VERSION}-x86_64-linux-gnu.tar.gz bitcoin-${BITCOIND_VERSION}
+
+    - name: Save bitcoind cache
+      uses: actions/cache/save@v4
+      if: ${{ steps.cache-bitcoind.outputs.cache-hit != 'true' && (github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true') }}
+      with:
+          path: /usr/local/bin/bitcoin*
+          key: ${{ steps.cache-bitcoind.outputs.cache-primary-key }}
+
+    - name: Restore CLN cache
+      id: cache-cln
+      if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
+      uses: actions/cache@v4
+      with:
+        path: |
+          /usr/local/bin/lightning*
+          /usr/local/libexec/c-lightning
+          ./lightning
+        key: cache-cln-${{ matrix.cln-version }}-${{ runner.os }}
 
     - name: Download Core Lightning ${{ matrix.cln-version }} & install binaries
       if: ${{ steps.cache-cln.outputs.cache-hit != 'true' && (github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true') }}
@@ -130,11 +129,29 @@ jobs:
         fetch-depth: 0  # Fetch all history for all branches and tags
         submodules: 'recursive'
 
+    - name: Save CLN cache
+      uses: actions/cache/save@v4
+      if: ${{ steps.cache-cln.outputs.cache-hit != 'true' && (github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true') }}
+      with:
+          path: |
+            /usr/local/bin/lightning*
+            /usr/local/libexec/c-lightning
+            ./lightning
+          key: ${{ steps.cache-cln.outputs.cache-primary-key }}
+
     - name: Set up Python ${{ matrix.python-version }}
       if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Restore python dependencies cache
+      id: cache-python-deps
+      if: ${{ github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true' }}
+      uses: actions/cache@v4
+      with:
+        path: ~/.local/lib/python${{ matrix.python-version }}/site-packages
+        key: cache-python-deps-${{ matrix.python-version }}-${{ matrix.cln-version }}-${{ runner.os }}
 
     - name: Install Core Lightning Python package dependencies
       if: ${{ steps.cache-python-deps.outputs.cache-hit != 'true' && (github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true') }}
@@ -156,6 +173,13 @@ jobs:
 
         pip3 install --upgrade pip
         pip3 install --user -U virtualenv pip > /dev/null
+
+    - name: Save python dependencies cache
+      uses: actions/cache/save@v4
+      if: ${{ steps.cache-python-deps.outputs.cache-hit != 'true' && (github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true') }}
+      with:
+          path: ~/.local/lib/python${{ matrix.python-version }}/site-packages
+          key: ${{ steps.cache-python-deps.outputs.cache-primary-key }}
 
     - name: Run pytest tests
       id: pytest_tests
