switch to debug

--- a/.gitmodules
+++ b/.gitmodules
@@ -69,4 +69,4 @@
 	url = https://github.com/BoltzExchange/hold
 [submodule "clnrest-rs"]
 	path = clnrest-rs
-	url = https://github.com/daywalker90/clnrest-rs.git
+	url = https://github.com/daywalker90/debug.git
