--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,7 +111,7 @@ jobs:
 
     - name: Save bitcoind cache
       uses: actions/cache/save@v4
-      if: ${{ always() && steps.cache-bitcoind.outputs.cache-hit != 'true' && github.event_name == 'push' }}
+      if: ${{ always() && (github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true') }}
       with:
           path: /usr/local/bin/bitcoin*
           key: cache-bitcoind-${{ matrix.bitcoind-version }}-${{ steps.exact_versions.outputs.os_version }}
@@ -138,7 +138,7 @@ jobs:
 
     - name: Save CLN cache
       uses: actions/cache/save@v4
-      if: ${{ always() && steps.cache-cln.outputs.cache-hit != 'true' && github.event_name == 'push' }}
+      if: ${{ always() && (github.event_name == 'push' || steps.set_plugin_dirs.outputs.run_ci == 'true') }}
       with:
           path: |
             /usr/local/bin/lightning*
